Remove bound checked attribute from custom checkboxes, as it broke site on IE11 (leading to doubly defined properties, which is illegal in strict mode); Ensure correct sizing of SVG logo; Change font face to Arial in order to prevent loading errors on IE, and also because we have no licence to use MTA font

--- a/src/assets/scss/danva/vars.scss
+++ b/src/assets/scss/danva/vars.scss
@@ -17,3 +17,8 @@ $govuk-text-colour: map-get($danva-colors, "black");
 $govuk-focus-text-colour: map-get($danva-colors, "black");
 $govuk-input-border-colour: map-get($danva-colors, "black");
 $govuk-body-background-colour: map-get($danva-colors, "white");
+
+// Overrides for govuk font
+$govuk-font-family: "Arial", sans-serif;
+$govuk-font-family-tabular: "Arial", sans-serif;
+$govuk-font-family-print: "Arial", sans-serif;
